--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,7 @@
 .product-description {
   font-size: 23px;
   line-height: 1.5;
+  text-align: justify;
 }
 .product-price {
   font-size: 50px;
@@ -23,11 +24,17 @@
   padding: 20px 50px;
   margin: 10px 0;
   background-color: #e4d129;
+  border-radius: 50px;
+}
+
+.add-cart:hover {
+  background-color: #cfbc0e;
 }
 
 .buy-now {
   padding: 20px 50px;
   margin: 10px 0;
+  border-radius: 50px;
 }
 .product-name {
   font-size: 40px;
