--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -49,13 +49,13 @@
   gap: 5;
 }
 
-.quantity-container > button {
+.quantity-container button {
   padding: 10px;
   font-size: 20px;
   width: 50px;
 }
 
-.quantity-container > input {
+.quantity-container input {
   width: 60px;
   text-align: center;
   background-color: white;
